src/BloomBrowserUI/bookEdit/sourceBubbles/sourceBubbles.less
@BubbleBorder:#E0DEB7;// #faf7cc;//#e0e5a3; //#F1D031 ;//#96668F;
@BubbleBackground:#faf7cc;// #ffd1a4;//#faffbb;//#FFFFA3 ;//#B57BAD;
@TabColor: @BubbleBorder;
@TabBorder: @BubbleBackground;

@BubbleTextColor: black;

.qtip-default{
	background-color: @BubbleBackground !important;
	border-color: @BubbleBorder !important;
	color: @BubbleTextColor !important;
  border-radius: 5px;
}
.uibloomSourceTextsBubble {
	// The "!important"s in here are needed to override qtip's defaults
	
	background-color: @BubbleBackground !important;
	border-color: @BubbleBorder !important;
	border-width: 2px !important;
	.qtip-content {
		padding: 0 9px 9px !important; // even up space around source bubbles
		// Qtip defaults to overflow: hidden, which masks the extra language dropdown
		&:hover {
			overflow: visible !important;
		}
	}
}




.ui-sourceTextsForBubble {
	position: relative;
	border-color: @BubbleBorder;
	NAV {
		display: block;
		height: 34px;
		margin: 0 -8px;
		//background-color: @TabColor;
		border-top-right-radius: 15px;
		border-top-left-radius: 15px;
		> UL {
			z-index: 1;
			background-color: transparent;
			text-align: center;
			margin: 0;
			padding: 0;
			display: flex;
			list-style: outside none none;
			top: 1px;
			line-height: 22px;
			&::after {
				position: absolute;
				content: "";
				width: 100%;
				bottom: 0;
				left: 0;
				border-bottom: 2px solid @TabBorder;
				z-index: 2;
			}
			> LI {
				font-size: 9pt;
				height: 31px;
				border-right: 1px solid @TabBorder;
				border-top-right-radius: 6px;
				float: left;
				flex: 1 0 auto;
				background-color: @TabColor;
				&:not(:first-child) {
					border-left: 1px solid @TabBorder;
					border-top-left-radius: 6px;
				}
				&:first-child {
					border-top-left-radius: 15px; // needed to overcome gecko bug
				}
				&.active {
					background-color: @BubbleBackground;
					border-bottom-color: @BubbleBackground; // make active tab appear in front
					z-index: 3;
				}
				A {
					max-width: 79px;
					white-space: nowrap;
					text-overflow: ellipsis;
					overflow: hidden;
					display: block;
					padding: 5px;
					outline: none;
					text-decoration: none;
					color: black;
					font-family: Segoe UI, sans-serif;
					&.active {
						font-weight: bold;
					}
					&:hover {
						text-decoration: underline;
						background-color: @BubbleBackground transparent;
					}
				}
			}
		}
	}
	.source-text {
		font-size: 10pt;
		line-height: 1.5;
		color: black;
		padding-top: 4px;
		&.active {
			overflow-y: hidden !important;
		}

		//thai script languages. If using Arial, they need to be 30% bigger or so. With the
		// popular Angsana New, it would need to be like 100% bigger
		&:lang(th), &:lang(km),&:lang(kjg), &:lang(prt){
			font-size: 18pt;
		}
	}
}

@DropdownBackground: @TabColor;
@DropdownHovered: @BubbleBackground;

.dropdown-list {
	max-height: 200px;
	overflow-y: auto;
	text-align: left;
	opacity: 1;
	margin: 0;
	padding: 0;
	position: relative;
	margin-top: 2px;
	white-space: nowrap;
	border: 1px solid @TabBorder;
	background-color: @DropdownBackground !important; // !important is needed to override a rule in editPaneGlobal.css
	top: 0;
	font-size: 9pt;
	z-index: 5;
	LI {
		&:hover {
			background-color: @DropdownHovered;
		}
	}
}
.dropdown-menu {
	width: 32px;
	border: none !important;
	&:hover {
		UL {
			display: inline-block;
		}
	}
	DIV {
		margin: 4px 0 0 0;
		display: block;
		&::before {
			content: "(";
		}
		&::after {
			content: ")";
		}
	}
	UL {
		display: none;
	}
}
.panel-container
{
	border: 1px solid black;
	padding: 0 10px;
}

